# ChatDO

./: .env.bak  .gitignore  AI_ROUTER_TOOLS_INTEGRATION.md  ALIAS_MATCHING_AND_RANK_OVERRIDE_FIX_SUMMARY.md  BRAVE_SEARCH_SETUP.md  CITATION_VERIFICATION.md  CLEANUP_SUMMARY.md  CONFLICT_ANALYSIS.md  CONSOLIDATION_SUMMARY.md  CRITICAL_ISSUES_REPORT.md  CROSS_CHAT_DEEP_LINKING.md  DEBUGGING_SUMMARY.md  DEEP_LINKING_FIX.md  DEEP_LINK_REQUIREMENTS.md  DEEP_LINK_TORTURE_REPORT.md  DIAGNOSTIC_REPORT.md  DIRECTORY_RESTRUCTURE_PLAN.md  DIRECTORY_STRUCTURE_ANALYSIS.md  DUPLICATION_REPORT.md  FACTS_BULK_PREFERENCE_INVESTIGATION.md  FACTS_SYSTEM_DEEP_ANALYSIS_REPORT.md  FACTS_SYSTEM_DEEP_INSPECTION_REPORT.md  FACT_STORAGE_STATUS.md  FILETREE_SOURCE_DISCOVERY_ISSUE.md  FINAL_INSPECTION_REPORT.md  FINAL_STRUCTURE.md  FINAL_VERIFICATION_REPORT.md  INDEX_FAILURE_ANALYSIS.md  LOGS_TO_DELETE.md  MEMORY_SERVICE_EXPLAINED.md  MEMORY_TAG_BEHAVIOR_EXPLAINED.md  MEMORY_TAG_FREQUENCY_ANALYSIS.md  MEMORY_TAG_IMPLEMENTATION.md  MEMORY_TAG_PROS_CONS.md  MESSAGES_SCOPING_FIX.md  MESSAGE_UUID_VERIFICATION.md  MODEL_LABEL_EXPLANATION.md  RANKED_LIST_CONSISTENCY_FIX_SUMMARY.md  README.md  RESTORATION_REPORT.md  (+62 more)
artifacts/: DEEP_LINK_TORTURE_RESULTS-cpu_throttle-1766270899524.json  DEEP_LINK_TORTURE_RESULTS-cpu_throttle-1766272713202.json  DEEP_LINK_TORTURE_RESULTS-normal-1766270837428.json  DEEP_LINK_TORTURE_RESULTS-normal-1766270900929.json  DEEP_LINK_TORTURE_RESULTS-normal-1766270901079.json  DEEP_LINK_TORTURE_RESULTS-normal-1766270901208.json  DEEP_LINK_TORTURE_RESULTS-normal-1766270901342.json  (+13 more)
(+661 files in other folders)
