[project]
name = "chatdo"
version = "1.0.0"
description = "Director of Operations (dev-time deep agent)"
requires-python = ">=3.10"
dependencies = [
  "deepagents",
  "pyyaml",
]

[project.scripts]
chatdo = "chatdo.__main__:main"

[tool.pytest.ini_options]
markers = [
    "cross_chat: marks tests as cross-chat memory tests",
]

